--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Rashmi Madane</title>
+        <title>Merry Christmass To Rashmi Madane</title>
 		<!--
 		
 		  _    _                           _   _                __     __             
@@ -451,7 +451,7 @@
 			    		data--16701-top="opacity: 1; top: -40%"
 			    		data--17695-top="opacity: 1; top: 50%"
 			    		data-anchor-target="#slide-2">
-				    	<img src="http://coderexample.com/img/img_rashmi.png">
+				    	<img src="http://coderexample.com/img/img_rashmi.png" title="Rashmi">
 			    	</div>
 			    	
 			    	
