--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="bootstrap.min.css">
         <script src="modernizr-2.7.1.min.js"></script>
+        <script src="https://raw.githubusercontent.com/arkaindas/titlejs/master/title.min.js"></script>
     </head>
     <body class="loading">
 
@@ -468,5 +469,8 @@
         <script src="imagesloaded.js"></script>
         <script src="skrollr.js"></script>
         <script src="bootstrap.min.js"></script>
+        <script>
+        	Title.marquee();
+        </script>
     </body>
 </html>
