--- a/index.html
+++ b/index.html
@@ -470,7 +470,9 @@
         <script src="skrollr.js"></script>
         <script src="bootstrap.min.js"></script>
         <script>
-        	Title.marquee();
+        	window.onload = function(){
+        		Title.animation("marquee";
+        	});
         </script>
     </body>
 </html>
