--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <script src="bootstrap.min.js"></script>
         <script>
         	window.onload = function(){
-        		Title.animation("marquee";
+        		Title.animation("marquee");
         	});
         </script>
     </body>
